# git-report

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  model.rs  output.rs  parser.rs  report.rs  server.rs
tests/: cli.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  styles.css
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
