[package]
name = "git-report"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.39", features = ["derive"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.23"
tower-http = { version = "0.6.6", features = ["cors"] }
webbrowser = "1.0.4"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
